@startuml class_diagram
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontSize 12

title Realtime Envelope - Classes

class "RealtimeMessage<TPayload>" as Env <<record>> {
    +SchemaVersion: int = 1
    +MessageId: Guid
    +Event: string
    +ProfileId: Guid
    +OccurredAt: DateTimeOffset
    +CorrelationId: Guid?
    +Payload: TPayload
}

interface IRealtimePublisher {
    +PublishToProfileAsync<TPayload>(\n  profileId, event, payload,\n  correlationId?, ct?): Task
}

class SignalRRealtimePublisher {
    -hub: IHubContext<CommitmentsHub>
    -log: ILogger
    +PublishToProfileAsync(...): Task
}

class HubClient {
    +messages$: Subject<any>
    +on<T>(event: string): Observable<T>
    +connect(): Promise<void>
    +disconnect(): void
}

interface "Observable<TPayload>" as Obs <<rxjs>> {}

IRealtimePublisher <|.. SignalRRealtimePublisher
SignalRRealtimePublisher --> Env : constructs
HubClient --> Obs : returns from on<T>

@enduml
